Nuevos procesos el ganso diagnosis

--- a/app_diagnosis__elganso_diagnosis_log.json
+++ b/app_diagnosis__elganso_diagnosis_log.json
@@ -42,7 +42,12 @@
                         "diagventassinlineas": "Ventas sin líneas",
                         "diagventassinpagos": "Ventas sin pagos",
                         "diagdirectordersnoidl": "Direct Order no IDL",
-                        "diagfacturaseci": "Facturación ECI"
+                        "diagfacturaseci": "Facturación ECI",
+                        "diagcontabilidad": "Sincro Arqueos",
+                        "diagventaseci": "Ventas ECI",
+                        "diagventassinfacturar": "Ventas sin facturar",
+                        "diagfacturacionsii": "Facturación SII",
+                        "diagfichprocesados": "Ficheros procesados"
                     }
                 }
             },
