Procesos el ganso diagnosis

--- a/app_diagnosis__elganso_diagnosis_log.json
+++ b/app_diagnosis__elganso_diagnosis_log.json
@@ -62,7 +62,7 @@
                         "diagviajescdidl": "Viajes Cross Docking",
                         "diagpedidosecommerceidl": "Pedidos ecommerce IDL",
                         "diagdevecorecibidas": "Devoluciones ecommerce recibidas",
-                        "diagdevecomagento": "Devoluciones ecommerce no enviadas a magento"
+                        "diagdevecomagento": "Devoluciones ecommerce no enviadas"
                     }
                 }
             },
