Nuevo proceso diagnosis elganso_sync comprobar ventas mirakl

--- a/app_diagnosis__elganso_diagnosis_log.json
+++ b/app_diagnosis__elganso_diagnosis_log.json
@@ -61,7 +61,8 @@
                         "diagviajescdidl": "Viajes Cross Docking",
                         "diagpedidosecommerceidl": "Pedidos ecommerce IDL",
                         "diagdevecorecibidas": "Devoluciones ecommerce recibidas",
-                        "diagdevecomagento": "Devoluciones ecommerce no enviadas"
+                        "diagdevecomagento": "Devoluciones ecommerce no enviadas",
+                        "diagarticulosactivosmirakl": "Articulos activos mirakl"
                     }
                 }
             },
