--- a/app_diagnosis__newrecordyb_procesos.json
+++ b/app_diagnosis__newrecordyb_procesos.json
@@ -24,6 +24,7 @@
                     "title": "Datos sincronización",
                     "fields": {
                         "url": {},
+                        "passwd": {},
                         "syncapi": {},
                         "syncstore": {},
                         "syncrecieve": {},
