--- a/app_diagnosis__yb_procesos.json
+++ b/app_diagnosis__yb_procesos.json
@@ -19,6 +19,7 @@
                 "gb__sync": {
                     "fields": {
                         "url": {},
+                        "passwd": {},
                         "syncapi": {},
                         "syncstore": {},
                         "syncrecieve": {},
