Nueva comprobacion elganso:sincro urls imagenes

--- a/app_diagnosis__elganso_diagnosis_log.json
+++ b/app_diagnosis__elganso_diagnosis_log.json
@@ -62,7 +62,8 @@
                         "diagpedidosecommerceidl": "Pedidos ecommerce IDL",
                         "diagdevecorecibidas": "Devoluciones ecommerce recibidas",
                         "diagdevecomagento": "Devoluciones ecommerce no enviadas",
-                        "diagarticulosactivosmirakl": "Articulos activos mirakl"
+                        "diagarticulosactivosmirakl": "Articulos activos mirakl",
+                        "diagurlsimagenessinprocesar": "Urls Imagenes sin procesar"
                     }
                 }
             },
